/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JFrame.java to edit this template
 */
package views;

import java.util.ArrayList;
import javax.swing.JButton;
import javax.swing.JLabel;
import javax.swing.JPanel;
import views.admin.MenuItemView;

/**
 *
 * @author P51
 */
public class AdminDashboardView extends DashboardView {

    /**
     * Creates new form AdminDashboardView
     */
    public AdminDashboardView() {
        initComponents();
        setLocationRelativeTo(null);
        logoutButton.putClientProperty("JButton.buttonType", "roundRect");
    }
    @Override
    public JButton getBtnLogout() {
        return logoutButton;
    }

    @Override
    public JLabel getLbName() {
        return nameLabel;
    }

    // Thêm dropdown menu
    @Override
    public void addMenu(MenuItemView... menu) {
        for (int i = 0; i < menu.length; i++) {
            MenuItemView item = menu[i];
            menuItems.add(item);
            sidebarPanel.add(item);
//            ArrayList<MenuItemView> subMenus = item.getSubMenu();
//            for (MenuItemView subMenu : subMenus) {
//                addMenu(subMenu);
//                subMenu.setVisible(false);
//            }
        }
    }

    // Thêm các pane vào cardlayout
    @Override
    public void initLayout() {
        layoutPanel.removeAll();
        for (JPanel card : cards) {
            layoutPanel.add(card);
        }
        layoutPanel.updateUI();
    }

    @Override
    public JPanel getPanelLayout() {
        return layoutPanel;
    }

    @Override
    public JPanel getPanelSideBar() {
        return sidebarPanel;
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {
        java.awt.GridBagConstraints gridBagConstraints;

        layoutPanel = new javax.swing.JPanel();
        leftPanel = new javax.swing.JPanel();
        panelHeader = new javax.swing.JPanel();
        nameLabel = new javax.swing.JLabel();
        logoutButton = new javax.swing.JButton();
        sidebarPanel = new javax.swing.JPanel();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);

        layoutPanel.setMaximumSize(new java.awt.Dimension(1008, 680));
        layoutPanel.setMinimumSize(new java.awt.Dimension(1008, 680));
        layoutPanel.setPreferredSize(new java.awt.Dimension(1008, 680));
        layoutPanel.setLayout(new java.awt.CardLayout());
        getContentPane().add(layoutPanel, java.awt.BorderLayout.CENTER);

        leftPanel.setMinimumSize(new java.awt.Dimension(200, 680));
        leftPanel.setPreferredSize(new java.awt.Dimension(200, 680));
        leftPanel.setLayout(new java.awt.BorderLayout());

        panelHeader.setBackground(new java.awt.Color(34, 153, 84));
        panelHeader.setPreferredSize(new java.awt.Dimension(200, 50));
        panelHeader.setLayout(new java.awt.GridBagLayout());

        nameLabel.setFont(new java.awt.Font("Segoe UI", 1, 14)); // NOI18N
        nameLabel.setForeground(new java.awt.Color(255, 255, 255));
        nameLabel.setText("Vũ Công Tuấn Dương");
        gridBagConstraints = new java.awt.GridBagConstraints();
        gridBagConstraints.anchor = java.awt.GridBagConstraints.BASELINE;
        gridBagConstraints.weightx = 0.1;
        gridBagConstraints.insets = new java.awt.Insets(0, 5, 0, 0);
        panelHeader.add(nameLabel, gridBagConstraints);

        logoutButton.setText("Thoát");
        gridBagConstraints = new java.awt.GridBagConstraints();
        gridBagConstraints.anchor = java.awt.GridBagConstraints.BASELINE;
        gridBagConstraints.weightx = 0.1;
        gridBagConstraints.insets = new java.awt.Insets(0, 0, 0, 5);
        panelHeader.add(logoutButton, gridBagConstraints);

        leftPanel.add(panelHeader, java.awt.BorderLayout.PAGE_START);

        sidebarPanel.setLayout(new java.awt.FlowLayout(java.awt.FlowLayout.CENTER, 0, 0));
        leftPanel.add(sidebarPanel, java.awt.BorderLayout.CENTER);

        getContentPane().add(leftPanel, java.awt.BorderLayout.LINE_START);

        pack();
    }// </editor-fold>//GEN-END:initComponents

    /**
     * @param args the command line arguments
     */
//    public static void main(String args[]) {
//        /* Set the Nimbus look and feel */
//        //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
//        /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
//         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
//         */
//        try {
//            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
//                if ("Nimbus".equals(info.getName())) {
//                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
//                    break;
//                }
//            }
//        } catch (ClassNotFoundException ex) {
//            java.util.logging.Logger.getLogger(AdminDashboardView.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
//        } catch (InstantiationException ex) {
//            java.util.logging.Logger.getLogger(AdminDashboardView.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
//        } catch (IllegalAccessException ex) {
//            java.util.logging.Logger.getLogger(AdminDashboardView.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
//        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
//            java.util.logging.Logger.getLogger(AdminDashboardView.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
//        }
//        //</editor-fold>
//
//        /* Create and display the form */
//        java.awt.EventQueue.invokeLater(new Runnable() {
//            public void run() {
//                new AdminDashboardView().setVisible(true);
//            }
//        });
//    }

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JPanel layoutPanel;
    private javax.swing.JPanel leftPanel;
    private javax.swing.JButton logoutButton;
    private javax.swing.JLabel nameLabel;
    private javax.swing.JPanel panelHeader;
    private javax.swing.JPanel sidebarPanel;
    // End of variables declaration//GEN-END:variables
}
