@startuml
package views {
    abstract class AuthenticationView {

    }
    class LoginView
    class ForgotPasswordView
    class RegisterView
    abstract class EntityRenderList <E extends Model> {
    }
    class EmployeeRenderList
    class CustomerRenderList
    abstract class DashboardView {

    }
    class AdminDashboardView {

    }
    
}
interface javax.swing.ListCellRenderer<E>
interface views.popup.MessageShowable {

}
class views.employee.ChangePasswordView
views.AuthenticationView --|> javax.swing.JFrame
views.AuthenticationView ..|> views.popup.MessageShowable
views.EntityRenderList ..|> ListCellRenderer
views.EmployeeRenderList --|> views.EntityRenderList
views.CustomerRenderList --|> views.EntityRenderList

views.DashboardView --|> javax.swing.JFrame
views.DashboardView ..|> views.popup.MessageShowable
views.LoginView --|> views.AuthenticationView
views.RegisterView --|> views.AuthenticationView
views.ForgotPasswordView --|> views.AuthenticationView
views.employee.ChangePasswordView --|> views.AuthenticationView
views.LoginView --|> views.AuthenticationView
views.AdminDashboardView --|> views.DashboardView
@enduml